project('plushys', ['cpp', 'c'],
          version: '0.1.0',
    meson_version: '>= 0.62.0',
  default_options: [ 'warning_level=2', 'werror=false', 'cpp_std=gnu++2a', ],
)

plushys_sources = [
  'main.cpp',
]

plushys_deps = [
]

executable('plushys', plushys_sources,
  dependencies: plushys_deps,
  install: true,
)

